--- a/src/index.css
+++ b/src/index.css
@@ -3,14 +3,31 @@ body {
   overflow-x: hidden;
 }
 
-:root, 
-body, 
+:root,
+body,
 html {
   background-color: #f5f5f5;
   box-sizing: border-box;
 }
 
-.div, h1, h2, h3, h4, h5, h6, header, html, i, img, label, li, nav, p, small, span, ul {
+.div,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+header,
+html,
+i,
+img,
+label,
+li,
+nav,
+p,
+small,
+span,
+ul {
   margin: 0;
   padding: 0;
   border: 0;
@@ -22,4 +39,22 @@ html {
 
 body {
   font-family: Arial, sans-serif;
+}
+
+@-webkit-keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
